--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: ci 
+name: build 
 on:
   push:
     branches:
@@ -13,4 +13,5 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install -r requirements.txt
-      - run: mkdocs gh-deploy --force
+      - name: Publish docs
+        run: mkdocs gh-deploy --force
