--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,7 +98,7 @@ extra:
     - icon: 'material/web'
       link: 'https://www.kandle.finance'
     - icon: 'material/twitter'
-      link: 'https://twitter.com/KandleFinance'
+      link: 'https://twitter.com/KandleDeFi'
     - icon: 'fontawesome/brands/telegram'
       link: 'https://t.me/+Mfeav0KtCOc1Mjk0'
     - icon: 'material/github'
